--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Jogo fofo de memória na praia"
+      content="Jogo fofo de memória no inferninho"
     />
-    <title>Memória do Will</title>
+    <title>Memória da capetinha</title>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
